--- a/src/composite/DebouncedTextBox/DebouncedTextBox.stories.mdx
+++ b/src/composite/DebouncedTextBox/DebouncedTextBox.stories.mdx
@@ -48,7 +48,7 @@ export const argTypes = { inputRef: { table: { disable: true } } };
 
 ```javascript
 import React from "react";
-import { DebouncedTextBox } from "qure-ui-components";
+import { DebouncedTextBox } from "@qure-ui-components";
 
 const DebounceExample = () => {
   const [value, setValue] = React.useState('')
