--- a/src/composite/Select/Select.stories.mdx
+++ b/src/composite/Select/Select.stories.mdx
@@ -45,7 +45,7 @@ export const simpleSelectArgs = {
 
 ```javascript
 import React from 'react';
-import Select from '@qure-ui-components/Select'
+import { Select } from '@qure-ui-components'
 
 export default function () {
   const [value, setValue] = React.useState()
