--- a/src/composite/TextBox/ExperimentalTextBox.stories.mdx
+++ b/src/composite/TextBox/ExperimentalTextBox.stories.mdx
@@ -1,7 +1,5 @@
 import {
   Meta,
-  ColorPalette,
-  ColorItem,
   ArgsTable,
   Story,
   Canvas,
@@ -17,7 +15,7 @@ export const TextBoxTemplate = (args) => (
   </div>
 );
 
-<Meta title="Experiment" />
+<Meta title="Experiment/TextBox" />
 
 # TextBox
 
@@ -25,8 +23,19 @@ export const textBoxArgTypes = {
   label: "your name",
   placeholder: "enter your name",
   type: "text",
-  inputMode: "text",
-  maxLength: 30,
+  id: "text_field",
+};
+
+export const textBoxNoLabelArgTypes = {
+  placeholder: "enter your password",
+  type: "password",
+  id: "text_field",
+};
+
+export const textBoxTypeNumberArgTypes = {
+  label: 'phone number',
+  placeholder: "enter your phone number",
+  type: "number",
   id: "text_field",
 };
 
@@ -34,33 +43,50 @@ export const argTypes = { inputRef: { table: { disable: true } } };
 
 An input field includes a label and a text field users can type text into.
 
+<Canvas>
+  <Story name="Text" args={{ ...textBoxArgTypes }} argTypes={argTypes}>
+    {TextBoxTemplate.bind({})}
+  </Story>
+</Canvas>
+
 ## Usage
 
 ```javascript
 import React from "react";
-import { InputField } from "@cred/neopop-web/lib/components";
+import { TextBox } from "@qure-ui-components";
 
-const InputFieldExample = () => {
+const TexBoxExample = () => {
   return (
-    <div>
-      <InputField
-        type="text"
-        label="your name"
-        placeholder="enter your name"
-        id="text_field"
-        autoFocus
-      />
-    </div>
+    <TextBox
+      type="text"
+      label="your name"
+      placeholder="enter your name"
+      id="text_field"
+    />
   );
 };
 
-export default InputFieldExample;
+export default TexBoxExample;
 ```
 
 ## Variant
 
 <Canvas>
-  <Story name="TextBox" args={{ ...textBoxArgTypes }} argTypes={argTypes}>
+  <Story
+    name="Number"
+    args={{ ...textBoxTypeNumberArgTypes }}
+    argTypes={argTypes}
+  >
+    {TextBoxTemplate.bind({})}
+  </Story>
+</Canvas>
+
+<Canvas>
+  <Story
+    name="No Label"
+    args={{ ...textBoxNoLabelArgTypes }}
+    argTypes={argTypes}
+  >
     {TextBoxTemplate.bind({})}
   </Story>
 </Canvas>
@@ -69,11 +95,10 @@ export default InputFieldExample;
 
 <div style={{overflowX: 'auto'}}>
 
-| prop      | description                                                  | type      |
-|-----------|--------------------------------------------------------------|-----------|
-| label     | Text to show as label. If not passed, no label will be shown | ReactNode |
-| hasError  | indicates whether to show error message                      | boolean   |
-| onChange* | event when the user commits a value change to a form control | function  |
+| prop       | description                                                  | type      |
+| ---------- | ------------------------------------------------------------ | --------- |
+| label      | Text to show as label. If not passed, no label will be shown | ReactNode |
+| hasError   | indicates whether to show error message                      | boolean   |
+| otherProps | supports all other input props                               |           |
 
 </div>
-
